# test_obs

Documents/tyglib2/tryglib/: CMakeLists.txt  main.cpp
Documents/tyglib2/tryglib/additional/util/: base.h
Documents/tyglib2/tryglib/libobs/: obs-config.h  obs-output.c  obs-source-transition.c  obs.c  obs.h
Documents/tyglib2/tryglib/libobs-opengl/: CMakeLists.txt
